Horizonriver QA20-Mar-2017/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>HRSupport</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>InProgress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
        <values>
            <fullName>Waiting on Parts</fullName>
        </values>
        <values>
            <fullName>Waiting on Vendor</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Assigned_Group__c</fullName>
        <label>Assigned Group</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Groups__c</fullName>
        <label>Assigned Group</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRSupport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseComment__c</fullName>
        <description>The most recent case comment</description>
        <label>Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Account_Email_Formula__c</fullName>
        <formula>Account.sendgrid4sf__Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRT_Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HRT_Case_Stage__c</fullName>
        <label>Case Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Telecom Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Staging Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Field Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Implementation Team I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Implementation Team II</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Email_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Email Send?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_Changed_Date__c</fullName>
        <label>Queue Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Sent__c</fullName>
        <label>Survey Sent</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>Accounting_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Accounting</label>
        <queue>Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Escalations_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Escalations</label>
        <queue>Escalations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Field Team</label>
        <queue>Field_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HRSupport_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>HRSupport</label>
        <queue>HRSupport</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Implementation_Support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Implementation Support</label>
        <queue>Implementation_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Implementation_Team_II_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Implementation Team II</label>
        <queue>Implementation_Team_II</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Implementation_Team_I_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Implementation Team I</label>
        <queue>Implementation_Team_I</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Operation_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Operation</label>
        <queue>Operation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Circuit_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Telecom Team</label>
        <queue>Telecom_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Staging_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Staging Team</label>
        <queue>Staging_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Case_Assignment</fullName>
        <active>true</active>
        <businessProcess>HRSupport</businessProcess>
        <label>Case Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>HRSupport</fullName>
        <active>false</active>
        <businessProcess>HRSupport</businessProcess>
        <label>HRSupport</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task_Assignment</fullName>
        <active>true</active>
        <businessProcess>HRSupport</businessProcess>
        <label>Task Assignment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   RecordTypeId  = &apos;012V00000008vOW&apos;,
  Not(ISCLONE()  ),
  Not(ISNEW() ), 
  ISCHANGED(AccountId) 
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Account Name con&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 RecordTypeId = &apos;012V00000008vOW&apos;, 
ISBLANK(AccountId )
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Account Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UpdateAssignedQueue</fullName>
        <active>false</active>
        <errorConditionFormula>Owner:Queue.QueueName &lt;&gt; TEXT( Assigned_Groups__c )</errorConditionFormula>
        <errorMessage>Add Groupname</errorMessage>
    </validationRules>
</CustomObject>